<?xml version="1.0" encoding="utf-8"?>
<resources>
    
   	
    <string name="tags">#droidsensor</string>
    
    
    
	<string name="property_server_url">http://droidsensor.appspot.com/api</string>
	
	<!-- 
	<string name="property_server_url">http://192.168.0.1:8080/api</string>
    -->
    
    <!-- i18n -->
    <string name="app_name">Droid Sensor</string>
    <string name="service_name">Droid Sensor</string>
    <string name="button_bind">Start Service</string>
    <string name="button_unbind">Stop Service</string>
    
    <string name="template_user">Passed by \@$id .$tags</string>
    
	<string name="template_device">Passed by $id .$tags</string>
	<string name="template_passed_device">Passed by $device that passed by @$id .$tags</string>
	<string name="template_passed_device_again">Passed by $device again.$tags</string>
	    
    <!-- new -->
    <string name="menu_discover">Start Discover</string>
    <string name="menu_stop_discover">Stop Discover</string>
    <string name="menu_settings">Settings</string>
    <string name="default_message">MENU &gt; Start Discover</string>

    
    <!-- deplicate -->
    <string name="advanced_menu_settings">Advanced Settings</string>

	<string name="twitter_id_title">Twitter ID</string>
	<string name="twitter_id_summary">User ID for Twitter account</string>

	<string name="twitter_password_title">Password</string>
	<string name="twitter_password_summary">Password for Twitter account</string>

	<string name="all_devices_title">All Bluetooth Devices</string>
	<string name="all_devices_summary">Tweet all discoverable Bluetooth Device name</string>
	
	<string name="second_twitter_id_title">Twitter Id</string>
	<string name="second_twitter_id_summary">User ID for second Twitter account</string>

	<string name="second_twitter_password_title">Password</string>
	<string name="second_twitter_password_summary">Password for second Twitter account</string>

    <string name="twitter_list_title">Twitter User</string>
    <string name="twitter_list_summary">Select account that tweet Twitter user</string>
    <string name="twitter_list_dialogtitle">Select Account</string>
    
    <string-array name="twitter_list_entries">
        <item>Basic Account</item>
        <item>Optional Account</item>
        <!-- 
        <item>Both</item>
        -->
    </string-array>
    <string-array name="twitter_list_entryvalues">
        <item>1</item>
        <item>2</item>
        <!-- 
        <item>2</item>
        -->
    </string-array>

    <string name="device_list_title">Device Name</string>
    <string name="device_list_summary">Select account that tweet Device name</string>
    <string name="device_list_dialogtitle">Select Account</string>
    
    <string-array name="device_list_entries">
        <item>Basic Account</item>
        <item>Optional Account</item>
        <!-- 
        <item>Both</item>
        <item>Only Notification</item>
        -->
    </string-array>
    <string-array name="device_list_entryvalues">
        <item>1</item>
        <item>2</item>
        <!-- 
        <item>2</item>
        <item>3</item>
        -->
    </string-array>


	<string name="device_detail_summary">Details for Device Discovery Settings</string>
    
	<string name="device_detail_passed_user_title">Passed by Twitter user</string>
	<string name="device_detail_passed_user_summary">Include that passed by Twitter user</string>

	<string name="device_detail_passed_me_title">Passed by Me</string>
	<string name="device_detail_passed_me_summary">Include that passed by Me</string>

	<string name="device_detail_passed_no_title">Passed by No one</string>
	<string name="device_detail_passed_no_summary">Include that passed by No one</string>
    
    
    
	<string name="toggle_bluetooth_title">Toggle Bluetooth</string>
	<string name="toggle_bluetooth_summary">Toggle bluetooth at constant intervals</string>
    
</resources>
