<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="com_google_appengine_droidsensor">
	<!-- keyを変えなきゃいけないけど、すでに配布しちゃってるしな、、、。 -->
	
	<PreferenceCategory android:title="Twitter account Settings">

			<EditTextPreference android:key="droidsensor_twitter_id"
				android:title="@string/twitter_id_title" 
				android:summary="@string/twitter_id_summary" 
				android:inputType="textAutoCorrect" />

			<EditTextPreference android:key="droidsensor_twitter_password"
				android:title="@string/twitter_password_title" 
				android:summary="@string/twitter_password_summary" 
				android:inputType="textPassword" />

	</PreferenceCategory>

	<!-- 
	<PreferenceCategory android:title="Message Settings">

				<EditTextPreference android:key="droidsensor_message"
					android:title="Message" android:inputType="textAutoCorrect" />
					
	</PreferenceCategory>
	-->
	
	<PreferenceCategory android:title="Discovery Settings">

		<CheckBoxPreference android:key="droidsensor_discovery_all_bluetooth_devices"
			android:title="@string/all_devices_title"
			android:summary="@string/all_devices_summary" />

	</PreferenceCategory>

	<!-- 
	<PreferenceCategory android:title="Advanced Settings">

		<PreferenceScreen android:title="Advanced Settings...">


			<PreferenceCategory android:title="Optional Twitter account Settings">

				<EditTextPreference android:key="droidsensor_optional_twitter_id"
					android:title="@string/second_twitter_id_title"
					android:summary="@string/second_twitter_id_summary"
					android:inputType="textAutoCorrect" />

				<EditTextPreference android:key="droidsensor_optional_twitter_password"
					android:title="@string/second_twitter_password_title"
					android:summary="@string/second_twitter_password_summary"
					android:inputType="textPassword" />

			</PreferenceCategory>

			<PreferenceCategory android:title="Dispatch Settings.">

				<ListPreference
					android:key="droidsensor_dispatch_user"
					android:title="@string/twitter_list_title"
					android:summary="@string/twitter_list_summary"
					android:dialogTitle="@string/twitter_list_dialogtitle"
					android:defaultValue="0"
					android:entries="@array/twitter_list_entries"
					android:entryValues="@array/twitter_list_entryvalues" />

				<ListPreference
					android:key="droidsensor_dispatch_device"
					android:title="@string/device_list_title"
					android:summary="@string/device_list_summary"
					android:dialogTitle="@string/device_list_dialogtitle"
					android:defaultValue="0"
					android:entries="@array/device_list_entries"
					android:entryValues="@array/device_list_entryvalues" />

			</PreferenceCategory>
			
		</PreferenceScreen>

	</PreferenceCategory>
	-->

	<!-- 
	<PreferenceCategory android:title="Notification Settings">

		<CheckBoxPreference android:key="droidsensor_notification_vibration"
			android:title="Vibration" />

		<CheckBoxPreference android:key="droidsensor_notification_led_flash"
			android:title="LED Flash" />

	</PreferenceCategory>
	-->
	
</PreferenceScreen>



	<!--
		<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent"> <TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/hello" />

		<Button android:id="@+id/button_bind"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_bind" /> <Button
		android:id="@+id/button_unbind" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_unbind" /> <Button
		android:id="@+id/button_call" android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_call" /> <Button
		android:id="@+id/button_discoverable"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_discoverable" /> <Button
		android:id="@+id/button_undiscoverable"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_undiscoverble" /> </LinearLayout>
	-->